--- a/CanvasManifest.json
+++ b/CanvasManifest.json
@@ -118,17 +118,17 @@
     "Id": "89fb4899-5868-4b44-8842-0469de7a4651",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "B_APP",
+    "Name": "タスランク",
     "OriginatingVersion": "1.343",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "B_APP",
-    "BackgroundColor": "RGBA(0,176,240,1)",
+    "AppName": "タスランク",
+    "BackgroundColor": "rgba(0, 0, 0, 1)",
     "IconColor": "RGBA(255,255,255,1)",
-    "IconName": "Edit",
-    "LogoFileName": "",
+    "IconName": "",
+    "LogoFileName": "logo.jpg",
     "PublishDataLocally": false,
     "PublishResourcesLocally": false,
     "PublishTarget": "player",
